# r-cran-h5r

./: INSTALL  MD5  NAMESPACE  NEWS  configure  configure.in
R/: h5R.R
debian/: changelog  control  copyright
inst/: index.R
inst/h5_files/: ex_1.h5  makeH5.py
man/: H5Container-class.Rd  H5DataFrame-class.Rd  H5File.Rd  H5Obj-class.Rd  createH5Attribute-methods.Rd  createH5Dataset-methods.Rd  createH5Group-methods.Rd  deleteH5Attribute-methods.Rd  deleteH5Obj-methods.Rd  envOrNULL-class.Rd  h5AttributeExists.Rd  h5DatasetExists.Rd  h5GroupExists.Rd  h5ObjectExists.Rd  hSlab-class.Rd  listH5Attributes.Rd  read1DSlabs.Rd  readH5Data-methods.Rd  readPoints.Rd  writeH5Data-methods.Rd
src/: Makevars  Makevars.in  Makevars.win  h5_debug.c  h5_wrap.c
tests/: Makefile  testErrors.R  testGetGroup.R  testMemory.R  testRead.R  testReadPoints.R  testWrite.R  tinyTestHarness.R
